--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,13 @@ code {
 table {
   border-collapse: collapse;
   border-radius: 2px;
+  margin: 10px;
 }
 
 table, th, td {
   border: 1px solid white;
   padding: 5px;
   color: white;
-  font-size: 1.5em;
 }
 
 .bg {
@@ -30,7 +30,7 @@ table, th, td {
   background-size: cover;
   height: 100vh;
   width: 100%;
-  position: absolute;
+  position: fixed;
   z-index: -1;
 }
 
@@ -38,4 +38,8 @@ table, th, td {
   backdrop-filter: blur(8px);
   height: 100vh;
   width: 100%;
+}
+
+form {
+  margin: 10px;
 }
